--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_small_12">12dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
+    <dimen name="padding_medium_20">20dp</dimen>
     <dimen name="padding_large">24dp</dimen>
     <dimen name="padding_large_32">32dp</dimen>
     <dimen name="bottom_view_item_padding_top">12dp</dimen>
@@ -40,5 +41,6 @@
     <dimen name="trip_screen_car_image_width">300dp</dimen>
     <dimen name="trip_screen_car_image_height">200dp</dimen>
     <dimen name="icon_size_24">24dp</dimen>
-    <dimen name="text_button_height">32dp</dimen>
+    <dimen name="text_button_height">40dp</dimen>
+    <dimen name="edit_text_1_line_height">32dp</dimen>
 </resources>
