--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,12 +47,13 @@
         <item name="cardCornerRadius">@dimen/card_corner_8</item>
     </style>
 
-    <style name="CardViewOnTripScreenStyle" parent="TripPriceCardViewStyle">
+    <style name="CardViewOnTripScreenStyle" parent="Widget.Material3.CardView.Elevated">
         <item name="cardBackgroundColor">@color/md_theme_background</item>
         <item name="contentPaddingLeft">@dimen/padding_medium</item>
         <item name="contentPaddingRight">@dimen/padding_medium</item>
-        <item name="contentPaddingTop">@dimen/padding_small_12</item>
-        <item name="contentPaddingBottom">@dimen/padding_small_12</item>
+        <item name="contentPaddingTop">@dimen/padding_medium</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="contentPaddingBottom">@dimen/padding_medium</item>
     </style>
 
     <style name="BlurCardViewOnImageStyle" parent="Widget.Material3.CardView.Filled">
@@ -71,7 +72,6 @@
         <item name="android:maxWidth">@dimen/button_max_width</item>
         <item name="android:textAppearance">@style/GeologicaLight14</item>
         <item name="android:textColor">@color/button_text_tint</item>
-
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetRight">0dp</item>
@@ -97,15 +97,30 @@
     </style>
 
     <style name="SmallFabButtonStyle" parent="Widget.Material3.Button.IconButton.Filled">
-<!--        android:insetLeft="0dp"-->
-<!--        android:insetTop="0dp"-->
-<!--        android:insetRight="0dp"-->
-<!--        android:insetBottom="0dp"-->
-<!--        android:padding="0dp"-->
         <item name="android:insetTop">0dp</item>
         <item name="android:insetRight">0dp</item>
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetBottom">0dp</item>
         <item name="android:padding">0dp</item>
+    </style>
+
+    <style name="UnderlineEditTextStyle">
+        <item name="android:inputType">textCapSentences|textAutoComplete</item>
+        <item name="android:lines">1</item>
+        <item name="android:paddingStart">0dp</item>
+        <item name="android:paddingTop">@dimen/margin_extra_small</item>
+        <item name="android:paddingEnd">@dimen/margin_extra_small</item>
+        <item name="android:paddingBottom">@dimen/margin_extra_small</item>
+        <item name="android:textAppearance">@style/TextFieldTextStyle</item>
+        <item name="android:textColorHint">@color/grey_focus</item>
+    </style>
+
+    <!--  Стиль для полноэкранных диалогов-->
+    <style name="FullScreenDialog">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowMinWidthMajor">100%</item>
+        <item name="android:windowMinWidthMinor">100%</item>
+        <item name="android:windowBackground">@color/grey_dialog_background</item>
     </style>
 </resources>
