--- a/app/src/main/res/layout/block_route_start_info.xml
+++ b/app/src/main/res/layout/block_route_start_info.xml
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/text_button_height"
             android:text="@string/trip_confirm_set_time_button_text"
-            android:visibility="gone"
+            android:visibility="visible"
             tools:ignore="TextSizeCheck,TextContrastCheck,TouchTargetSizeCheck"
             tools:visibility="visible" />
 
@@ -110,6 +110,7 @@
         style="?attr/textInputFilledStyle"
         android:layout_width="match_parent"
         android:layout_height="32dp"
+        android:layout_marginTop="@dimen/margin_extra_small"
         android:textColorHint="@color/grey_focus"
         app:boxBackgroundColor="@color/md_theme_background"
         app:hintEnabled="false">
@@ -118,14 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/trip_confirm_address_point_field_hint"
-            android:lines="1"
-            android:paddingStart="0dp"
-            android:paddingTop="@dimen/margin_extra_small"
-            android:paddingEnd="@dimen/margin_extra_small"
-            android:paddingBottom="@dimen/margin_extra_small"
-            android:textAppearance="@style/TextFieldTextStyle"
-            android:textColorHint="@color/grey_focus"
-            android:textSize="14sp"
+            style="@style/UnderlineEditTextStyle"
             tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
     </com.google.android.material.textfield.TextInputLayout>
 
