--- a/app/src/main/res/layout/trip_card.xml
+++ b/app/src/main/res/layout/trip_card.xml
@@ -105,7 +105,7 @@
                     android:layout_height="@dimen/icon_size_16"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/margin_extra_small"
-                    android:src="@drawable/pin" />
+                    android:src="@drawable/pin_blue" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/addressFromText"
@@ -120,7 +120,7 @@
                     android:layout_height="@dimen/icon_size_16"
                     android:layout_gravity="center"
                     android:layout_marginStart="@dimen/margin_small"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:src="@drawable/line_arrow_right" />
             </LinearLayout>
 
@@ -140,7 +140,7 @@
                     android:layout_height="@dimen/icon_size_16"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/margin_extra_small"
-                    android:src="@drawable/pin" />
+                    android:src="@drawable/pin_red" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/addressDestText"
